# kbe

./: .gitignore  .gitmodules  AUTHORS  BUGS  CMakeLists.txt  COPYING.MIT  INSTALL  README  scgprintergriddialog.h  scgscene.cpp  scgwindow.cpp  scgwindow.h
sources/: CMakeLists.txt  Makefile  abstractfileloader.h  abstractfilewriter.h  all.pro  all.pro.user.2.7pre1  basewindow.cpp  basewindow.h  config.cpp  config.h  extendedtabbar.cpp  extendedtabbar.h  extendedtabwidget.cpp  extendedundoview.h  findwidget.h  gwfobjectinforeader.cpp  gwfobjectinforeader.h  gwfstreamwriter.cpp  kbe.pro  layoutmanager.cpp  layoutmanager.h  main.cpp  mainwindow.cpp  mainwindow.ui  pointgraphicsitem.cpp  readwritemanager.h  scgarranger.cpp  scgarranger.h  scgarrangergrid.cpp  scgarrangergrid.h  scgarrangerhorizontal.cpp  scgarrangerhorizontal.h  scgarrangertuple.cpp  scgarrangertuple.h  scgarrangervertical.cpp  scgarrangervertical.h  scgbus.cpp  scgcommands.cpp  scgcommands.h  scgcontent.cpp  (+35 more)
sources/build-kbe-Desktop_Qt_5_0_2_MSVC2010_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
sources/event_handling/: SCgBusModeEventHandler.cpp  SCgBusModeEventHandler.h  SCgContourModeEventHandler.cpp  SCgContourModeEventHandler.h  SCgEventHandler.cpp  SCgEventHandler.h  SCgInsertModeEventHandler.cpp  SCgPairModeEventHandler.cpp  SCgSelectModeEventHandler.cpp  SCgSelectModeEventHandler.h
sources/kbe/: CMakeLists.txt  basewindow.cpp  basewindow.h  config.cpp  config.h  extendedtabwidget.cpp  extendedtabwidget.h  extendedundoview.cpp  extendedundoviewmodel.cpp  extendedundoviewmodel.h  feedbackdialog.cpp  feedbackdialog.h  feedbackwidget.cpp  feedbackwidget.h  findwidget.cpp  guidedialog.cpp  guidedialog.h  kbe.pro  kbe.qrc  kbe.rc  kbe_mac.icns  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newfiledialog.cpp  newfiledialog.h  newscgactionsdialog.cpp  newscgactionsdialog.h  newscgconstractionsdialog.cpp  newscgconstractionsdialog.h  parametersdialog.cpp  parametersdialog.h  platform.h  pluginmanager.cpp  pluginmanager.h  projectmanager.cpp  projectmanager.h  projectmanagerdockwidget.cpp  projectmanagerdockwidget.h  (+16 more)
sources/kbe/construction/: five.gwf  triple.gwf
sources/kbe/interfaces/: abstractfileloader.cpp  abstractfileloader.h  abstractfilewriter.cpp  abstractfilewriter.h  editorinterface.h  fileloaderinterface.h  filewriterinterface.h  plugininterface.h  windowinterface.h
sources/kbe/media/: logo.psd  splash.blend
sources/kbe/media/startup/: index.html  index.html~
sources/kbe/media/stylesheets/: projectmanager.qss  tooltipstyle.css
sources/kbe/media/translations/: lang_en_EN.qm  lang_en_EN.ts  lang_ru_RU.qm  lang_ru_RU.ts
sources/m4scp/: m4scpcodecompleter.cpp  m4scpcodecompleter.h  m4scpcodeeditor.cpp  m4scpcodeeditor.h  m4scpfileloader.cpp  m4scpfileloader.h  m4scpfilewriter.cpp  m4scpfilewriter.h  m4scpsyntax.cpp  m4scpsyntax.h  m4scpsyntaxhighlighter.cpp  m4scpsyntaxhighlighter.h  m4scpwindow.cpp  m4scpwindow.h
sources/plugins/: CMakeLists.txt  plugins
sources/plugins/m4scp/: CMakeLists.txt  Makefile  blockdata.h  m4scp.pro  m4scp.qrc  m4scpblockdata.h  m4scpcodeanalyzer.cpp  m4scpcodeanalyzer.h  m4scpcodecompleter.cpp  m4scpcodecompleter.h  m4scpcodeeditor.cpp  m4scpcodeeditor.h  m4scpconfig.cpp  m4scpconfig.h  m4scpfileloader.cpp  m4scpfileloader.h  m4scpfilewriter.cpp  m4scpfilewriter.h  m4scpfinddialog.cpp  m4scpfinddialog.h  m4scpfinder.cpp  m4scpfinder.h  m4scpplugin.cpp  m4scpplugin.h  m4scpsyntax.cpp  m4scpsyntax.h  m4scpsyntaxhighlighter.cpp  m4scpsyntaxhighlighter.h  m4scpwindow.cpp  m4scpwindow.h
sources/plugins/m4scp/moc/: moc_m4scpcodecompleter.cpp  moc_m4scpcodeeditor.cpp  moc_m4scpplugin.cpp  moc_m4scpwindow.cpp
sources/plugins/scg/: CMakeLists.txt  a.cpp  a.h  ballontypetoolbar.cpp  ballontypetoolbar.h  fileloader.h  filewriter.h  foo.cpp  foo.h  pointgraphicsitem.h  scg.pro  scg.qrc  scgabstractobjectbuilder.cpp  scgabstractobjectbuilder.h  scgactionwithvideotooltip.cpp  scgactionwithvideotooltip.h  scgalphabet.cpp  scgalphabet.h  scgarranger.cpp  scgarranger.h  scgarrangertuple.cpp  scgarrangertuple.h  scgarrangervertical.h  scgbus.cpp  scgbus.h  scgcommands.cpp  scgcommands.h  scgconfig.cpp  scgconfig.h  scgcontent.cpp  scgcontent.h  scgcontentchangedialog.cpp  scgcontentchangedialog.h  scgcontentdialog.cpp  scgcontentdialog.h  scgcontentfactory.cpp  scgcontentfactory.h  scgcontentimage.cpp  scgcontentimage.h  scgcontentnumeric.cpp  (+81 more)
sources/plugins/scg/arrangers/: scgarranger.cpp  scgarranger.h  scgarrangerenergybased.cpp  scgarrangerenergybased.h  scgarrangergrid.cpp  scgarrangergrid.h  scgarrangerhorizontal.cpp  (+7 more)
sources/plugins/scn/: scn.pro  scn.qrc  scneditorscene.cpp  scneditorscene.h  scnfieldglobalidtf.cpp  scnfieldglobalidtf.h  scnfielditem.cpp  scnfielditem.h  scninputdialog.cpp  scninputdialog.h  scnplugin.cpp  scnplugin.h  scnwindow.cpp  scnwindow.h
sources/plugins/scs/: CMakeLists.txt  abstracthighlightingrule.cpp  abstracthighlightingrule.h  codeeditor.cpp  codeeditor.h  multilinecommenthighlightingrule.cpp  multilinecommenthighlightingrule.h  scs.pro  scs.qrc  scsabstracthighlightingrule.cpp  scsabstracthighlightingrule.h  scscodeanalyzer.cpp  scscodeanalyzer.h  scscodecompleter.cpp  scscodecompleter.h  scscodeeditor.cpp  scscodeeditor.h  scscodeerroranalyzer.cpp  scscodeerroranalyzer.h  scserrortablewidget.cpp  scserrortablewidget.h  scserrortablewidgetitem.cpp  scserrortablewidgetitem.h  scsfileloader.cpp  scsfileloader.h  scsfilewriter.cpp  scsfilewriter.h  scsfindwidget.cpp  scsfindwidget.h  scshighlightingrulespool.cpp  scshighlightingrulespool.h  scsmultilinecommenthighlightingrule.cpp  scsmultilinecommenthighlightingrule.h  scsplugin.cpp  scsplugin.h  scsplugin.json  scsstdhighlightingrule.cpp  scsstdhighlightingrule.h  scssyntaxhighlighter.cpp  scssyntaxhighlighter.h  (+6 more)
sources/translations/: lang_en_EN.ts  lang_ru_RU.ts
sources/updater/: main.cpp  updatedownloader.cpp  updatedownloader.h  updateextractor.cpp  updateextractor.h  updateinstaller.cpp  updateinstaller.h  updater.pro  updatewindow.cpp  updatewindow.h
(+366 files in other folders)
